Update example project to run with newer CocoaPods, Xcode.
Updated constraints on Main.storyboard/ResultLabel line break mode to display more details.

--- a/ExampleProject/Podfile
+++ b/ExampleProject/Podfile
@@ -1,3 +1,17 @@
-source 'https://github.com/CocoaPods/Specs.git'
+# Uncomment the next line to define a global platform for your project
+platform :ios, '8.0'
 
-pod 'KINBarCodeScanner', '~> 0.0'
+target 'ExampleProject' do
+  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+  use_frameworks!
+
+  # Pods for ExampleProject
+
+  pod 'KINBarCodeScanner'
+
+  target 'ExampleProjectTests' do
+    inherit! :search_paths
+    # Pods for testing
+  end
+
+end
